# DOTMessage

./: .gitignore  CMakeLists.txt  README.md
cmake/: dependencies.cmake  (+1 more)
include/: CMakeLists.txt  document.hpp  geometry.hpp  object.hpp  objecttype.hpp  text.hpp
include/dom/: CMakeLists.txt  barcode.hpp  datecodes.hpp  document.hpp  documentvisitor.hpp  dotmessage.hpp  idocumentbuilder.hpp  image.hpp  object.hpp  primitives.hpp  refreshpolicy.hpp  text.hpp  variableobject.hpp
include/dom/builders/: CMakeLists.txt  linxparser.hpp  nisxparser.hpp
include/dom/components/: CMakeLists.txt  barcodeapplications.hpp  barcodesymbologies.hpp  geometry.hpp  pen.hpp
include/dom/components/datasources/: CMakeLists.txt  compositedatasource.hpp  counterdatasource.hpp  databasedatasource.hpp  datasource.hpp  datetimedatasource.hpp  datetimesource.hpp  offsettime.hpp  roundingdatepolicy.hpp  userinputdatasource.hpp
include/dom/datasources/: CMakeLists.txt  compositedatasource.hpp  counterdatasource.hpp  databasedatasource.hpp  datetimedatasource.hpp  userinputdatasource.hpp
include/dom/rippers/: CMakeLists.txt  context.hpp  ripper.hpp
include/dom/rippers/qt/: CMakeLists.txt  qtripper.hpp
include/dom/rippers/sdl/: CMakeLists.txt  sdlripper.hpp
include/dom/visitors/: CMakeLists.txt
include/dom/visitors/nisx/: CMakeLists.txt
include/dom/visitors/refreshpolicy/: CMakeLists.txt  refreshpolicydatasourcevisitor.hpp  refreshpolicyobjectvisitor.hpp
include/dom/writers/: CMakeLists.txt  nisxwriter.hpp
include/message/: CMakeLists.txt  alignment.hpp  barcode.hpp  barcodesymbologies.hpp  color.hpp  document.hpp  documentparser.hpp  documentvisitor.hpp  font.hpp  image.hpp  object.hpp  objecttype.hpp  pen.hpp  primitives.hpp  refreshpolicy.hpp  text.hpp  textboxproperties.hpp  variableobject.hpp
include/message/datasources/: CMakeLists.txt  compositedatasource.hpp  counterdatasource.hpp  databasedatasource.hpp  datasource.hpp  datetimedatasource.hpp  userinputdatasource.hpp
src/: CMakeLists.txt  barcode.cpp  color.cpp  document.cpp  image.cpp  object.cpp  primitives.cpp  text.cpp  variableobject.cpp
src/builders/: CMakeLists.txt
src/builders/nisx/: CMakeLists.txt  doccolors.cpp  doccolors.hpp  docproperties.cpp  docproperties.hpp  documentparser.cpp  documentparser.hpp  fieldsparser.cpp  fieldsparser.hpp  nisxcommonnames.hpp  nisxparser.cpp
src/builders/nisx/objects/: barcodeparser.cpp  barcodeparser.hpp  diamondparser.cpp  ellipseparser.cpp  fontparser.cpp  fontparser.hpp  imageparser.cpp  imageparser.hpp  lineparser.cpp  objectparser.cpp  objectparser.hpp  primitiveparser.cpp  rectangleparser.cpp  textparser.cpp  textparser.hpp
src/datasources/: CMakeLists.txt  compositedatasource.cpp  counterdatasource.cpp  databasedatasource.cpp  datetimedatasource.cpp  userinputdatasource.cpp
src/dom/: CMakeLists.txt  barcode.cpp  color.cpp  datecodes.cpp  document.cpp  dotmessage.cpp  image.cpp  object.cpp  primitives.cpp  text.cpp  variableobject.cpp
src/dom/builders/: CMakeLists.txt  linxparser.cpp  nisxparser.cpp
src/dom/builders/linx/: CMakeLists.txt  docproperties.cpp  docproperties.hpp  documentparser.cpp  documentparser.hpp  fieldsparser.cpp  fieldsparser.hpp  linxparsercontext.cpp  linxparsercontext.hpp  offsetDate.hpp  offsetdateparser.cpp  offsetdateparser.hpp  textpropertiesparser.cpp  textpropertiesparser.hpp
src/dom/builders/nisx/: CMakeLists.txt  doccolors.cpp  docproperties.cpp  documentparser.cpp  documentparser.hpp  fieldsparser.cpp  fieldsparser.hpp  nisxcommonnames.hpp
src/dom/components/: CMakeLists.txt  color.cpp
src/dom/components/datasources/: CMakeLists.txt  compositedatasource.cpp  counterdatasource.cpp  databasedatasource.cpp  datetimedatasource.cpp  offsettime.cpp  userinputdatasource.cpp
src/dom/components/symbologies/: CMakeLists.txt  barcodeapplications.cpp  barcodesymbology.cpp  symbology.cpp  symbology.hpp
src/dom/datasources/: compositedatasource.cpp  counterdatasource.cpp  databasedatasource.cpp  datetimedatasource.cpp  userinputdatasource.cpp
src/dom/factories/: CMakeLists.txt  abstractobjectfactory.hpp  barcodesymbologyfactory.hpp  datasourcefactory.hpp
src/dom/rippers/: CMakeLists.txt  bitmapgenerator.hpp  ripper.cpp
src/dom/rippers/qt/: CMakeLists.txt  qtbarcode.cpp  qtbarcode.hpp  qtdiamond.cpp  qtdiamond.hpp  qtellipse.cpp  qtellipse.hpp  qtgenerator.cpp  qtgenerator.hpp  qtimage.cpp  qtimage.hpp  qtline.cpp  qtline.hpp  qtobject.cpp  qtobject.hpp  qtprimitive.cpp  qtprimitive.hpp  qtrectangle.cpp  qtrectangle.hpp  qtripper.cpp  qttext.cpp  qttext.hpp
src/dom/rippers/sdl/: CMakeLists.txt  sdlgenerator.cpp  sdlgenerator.hpp
src/dom/symbologies/: CMakeLists.txt  barcodesymbology.cpp  symbology.hpp
src/dom/visitors/: CMakeLists.txt
src/dom/visitors/refreshpolicy/: CMakeLists.txt  (+1 more)
src/dom/writers/: CMakeLists.txt  nisxwriter.cpp
src/factories/: CMakeLists.txt  abstractobjectfactory.hpp  barcodesymbologyfactory.hpp  datasourcefactory.hpp
src/symbologies/: barcodesymbology.cpp  symbology.cpp  symbology.hpp
src/visitors/: CMakeLists.txt
src/visitors/nisx/: CMakeLists.txt  documentvisitor.cpp  nisxwriter.cpp  objectvisitor.hpp  variableobjectvisitor.hpp
test/: CMakeLists.txt  main.cpp
test/rc/: CQ.nisx  GALLO.nisx  MENSAJE3.NISX  MENSAJE5.NISX  TEST.nisx  TEST_BARCODES.nisx  TEST_I.nisx  TEST_II.nisx  TEST_III.nisx  TEST_IV.nisx  TEST_V.nisx  TEST_VI.nisx  testParserNisx.nisx  testParserNisx.nisx.DATA
test/rc/linx/: EFAPEL.ciff  Full_barcodes.ciff  Mato_30_dias.ciff  NORTE_EUROCAO.ciff  Pan_molde.ciff  Pan_molde_4_dias.ciff  VARIABLE.ciff  VARIABLE2.ciff  Yogur_35_dias.ciff  barcodes_full.ciff  datas_full.ciff  frankfurt.ciff  frankfurtUTF16.ciff  linxformatted.ciff  msj_01_tto_formatted.ciff  msj_jovi.ciff  pedro.ciff  textofijo.ciff  tt10_HSPCK2015.ciff  tt3fira.ciff  tt5nou.ciff
test/unitests/: CMakeLists.txt  barcode_ut.cpp  datetimedatasourceparser_ut.cpp  document_ut.cpp  mockvariableobject.hpp  variableobject_ut.cpp
test/unitests/builders/: CMakeLists.txt
test/unitests/components/: CMakeLists.txt
(+124 files in other folders)
